Add scss color variables, clean up

--- a/src/components/atoms/Avatar/Avatar.module.scss
+++ b/src/components/atoms/Avatar/Avatar.module.scss
@@ -1,11 +1,11 @@
 .avatar {
-  color: #fff;
+  color: $white;
   font-weight: 900;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  background: #607d8b;
+  background: $blue-grey-500;
   width: 1.5rem;
   aspect-ratio: 1;
   flex-shrink: 0;
