--- a/src/components/atoms/Badge/Badge.module.scss
+++ b/src/components/atoms/Badge/Badge.module.scss
@@ -1,11 +1,11 @@
 .badge {
-  color: #607d8b;
+  color: $blue-grey-500;
   font-size: 0.75rem;
   font-weight: 800;
   letter-spacing: 0.05rem;
   text-transform: uppercase;
   border-radius: 2rem;
-  background: #eceff1;
+  background: $blue-grey-50;
   padding: 0.5rem 1.25rem;
   display: inline-block;
 }
