--- a/src/components/molecues/IssueStatusBadge/IssueStatusBadge.module.scss
+++ b/src/components/molecues/IssueStatusBadge/IssueStatusBadge.module.scss
@@ -8,11 +8,11 @@
 }
 
 .pending {
-  color: #ff9800;
-  background: #fff3e0;
+  color: $orange-500;
+  background: $orange-50;
 }
 
 .closed {
-  color: #009688;
-  background: #e0f2f1;
+  color: $teal-500;
+  background: $teal-50;
 }
