--- a/src/components/atoms/Button/Button.module.scss
+++ b/src/components/atoms/Button/Button.module.scss
@@ -6,7 +6,7 @@
   min-height: 2.5rem;
   padding: 0.5rem 1.25rem;
   border-radius: $borderRadius;
-  background: #fff;
+  background: $white;
   border: 0;
 
   gap: 0.5rem;
