--- a/src/components/molecues/DeleteActionButton/DeleteActionButton.module.scss
+++ b/src/components/molecues/DeleteActionButton/DeleteActionButton.module.scss
@@ -1,10 +1,10 @@
 .deleteActionButton {
-  color: #f44336;
+  color: $red-500;
   padding: 0.75rem;
   border-radius: 50%;
   aspect-ratio: 1;
 
   &:hover {
-    background: #ffebee;
+    background: $red-50;
   }
 }
