--- a/src/components/molecues/UpdateIssueStatusButton/UpdateIssueStatusButton.module.scss
+++ b/src/components/molecues/UpdateIssueStatusButton/UpdateIssueStatusButton.module.scss
@@ -1,12 +1,12 @@
 .updateStatusButton {
   padding: 0.5rem 1.25rem;
-  color: #3f51b5;
-  background: #e8eaf6;
+  color: $indigo-500;
+  background: $indigo-50;
   gap: 0.5rem;
 
   &:hover {
-    color: #fff;
-    background: #3f51b5;
+    color: $white;
+    background: $indigo-500;
   }
 
   @media (max-width: $breakpoint) {
